[package]
name = "pitt"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
google-cloud-storage = "0.22.1"
reqwest = { version = "0.12.9", features = ["rustls-tls"], default-features = false }
serde_json = "1.0.133"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "time"] }